Final testing of  code

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "id": "be096ff5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "id": "b579b9cd",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "id": "acbe1f6e",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "[8084 rows x 8 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "id": "5d0bac56",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "(8084, 8)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "id": "8d8b8595",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "id": "2de4c239",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "id": "0231e389",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "id": "3d0db6a5",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "id": "f93e8ff9",
    "metadata": {},
    "outputs": [],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "id": "afd26466",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "{'Random Forest': 0.45469001950616234, 'SVM': 0.5933446121140653}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "id": "a32639ca",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
        "{'Random Forest': 0.47930475175651455, 'SVM': 0.5854220473255666}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "id": "91d6162e",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "7c08d4ec",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "fa5113fb",
    "metadata": {},
    "outputs": [
@@ -704,35 +704,36 @@
      "output_type": "stream",
      "text": [
       "Random Forest Model:\n",
-      "Macro-average f1 score: 0.38093172208127923\n",
+      "Macro-average f1 score: 0.4010445940798477\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
       "           Conservative       0.69      0.98      0.81       964\n",
-      "                 Labour       0.71      0.37      0.49       463\n",
+      "                 Labour       0.76      0.38      0.51       463\n",
       "       Liberal Democrat       0.00      0.00      0.00        54\n",
-      "Scottish National Party       0.82      0.13      0.23       136\n",
+      "Scottish National Party       0.92      0.17      0.29       136\n",
       "\n",
-      "               accuracy                           0.70      1617\n",
-      "              macro avg       0.56      0.37      0.38      1617\n",
-      "           weighted avg       0.69      0.70      0.64      1617\n",
+      "               accuracy                           0.71      1617\n",
+      "              macro avg       0.59      0.38      0.40      1617\n",
+      "           weighted avg       0.71      0.71      0.65      1617\n",
       "\n",
       "\n",
       "\n",
       "SVM Model:\n",
-      "Macro-average f1 score: 0.5648199900445738\n",
+      "Macro-average f1 score: 0.5755080221074028\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.81      0.93      0.86       964\n",
-      "                 Labour       0.73      0.67      0.70       463\n",
+      "           Conservative       0.81      0.92      0.86       964\n",
+      "                 Labour       0.72      0.67      0.69       463\n",
       "       Liberal Democrat       1.00      0.06      0.11        54\n",
-      "Scottish National Party       0.79      0.47      0.59       136\n",
+      "Scottish National Party       0.79      0.54      0.64       136\n",
       "\n",
       "               accuracy                           0.79      1617\n",
-      "              macro avg       0.83      0.53      0.56      1617\n",
+      "              macro avg       0.83      0.55      0.58      1617\n",
       "           weighted avg       0.79      0.79      0.77      1617\n",
       "\n",
+      "Duration for default n-gram: 797.6876513957977\n",
       "\n",
       "\n",
       "For uni-gram, bi-gram and tri-gram\n",
@@ -753,35 +754,36 @@
       "Training SVM model \n",
       "\n",
       "Random Forest Model:\n",
-      "Macro-average f1 score: 0.4333299494722551\n",
+      "Macro-average f1 score: 0.4697235901804915\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.72      0.98      0.83       964\n",
-      "                 Labour       0.73      0.45      0.56       463\n",
+      "           Conservative       0.73      0.97      0.83       964\n",
+      "                 Labour       0.74      0.46      0.56       463\n",
       "       Liberal Democrat       0.00      0.00      0.00        54\n",
-      "Scottish National Party       0.91      0.21      0.35       136\n",
+      "Scottish National Party       0.84      0.34      0.48       136\n",
       "\n",
-      "               accuracy                           0.73      1617\n",
-      "              macro avg       0.59      0.41      0.43      1617\n",
-      "           weighted avg       0.72      0.73      0.68      1617\n",
+      "               accuracy                           0.74      1617\n",
+      "              macro avg       0.58      0.44      0.47      1617\n",
+      "           weighted avg       0.72      0.74      0.70      1617\n",
       "\n",
       "\n",
       "\n",
       "SVM Model:\n",
-      "Macro-average f1 score: 0.5733794251858857\n",
+      "Macro-average f1 score: 0.5768486648176033\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.82      0.93      0.87       964\n",
-      "                 Labour       0.72      0.69      0.70       463\n",
-      "       Liberal Democrat       1.00      0.07      0.14        54\n",
-      "Scottish National Party       0.78      0.46      0.58       136\n",
+      "           Conservative       0.83      0.93      0.88       964\n",
+      "                 Labour       0.74      0.71      0.73       463\n",
+      "       Liberal Democrat       0.00      0.00      0.00        54\n",
+      "Scottish National Party       0.85      0.60      0.70       136\n",
       "\n",
-      "               accuracy                           0.79      1617\n",
-      "              macro avg       0.83      0.54      0.57      1617\n",
-      "           weighted avg       0.79      0.79      0.77      1617\n",
-      "\n"
+      "               accuracy                           0.81      1617\n",
+      "              macro avg       0.61      0.56      0.58      1617\n",
+      "           weighted avg       0.78      0.81      0.79      1617\n",
+      "\n",
+      "Duration for 3-gram: 849.3814244270325\n"
      ]
     },
     {
@@ -793,18 +795,14 @@
       "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
       "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Random Forest': 0.4333299494722551, 'SVM': 0.5733794251858857}"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
